--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,11 @@ dependencies:
   flutter_launcher_icons: ^0.14.2
   get: ^4.6.6
   flutter_svg: ^2.0.16
+  iconsax: ^0.0.8
+  url_launcher: ^6.3.1
+  carousel_slider: ^5.0.0
+  google_fonts: ^6.2.1
+  flutter_screenutil: ^5.9.3
 
 flutter_launcher_icons:
   ios: true
@@ -39,5 +44,6 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+    - assets/icons/
     - assets/on_boarding/
     - assets/images/
